--- a/tripkerala/templates/signin/signin.html
+++ b/tripkerala/templates/signin/signin.html
@@ -16,9 +16,9 @@
             <h1 style="padding-left: 20px;">TripKerala</h1>
             <p style="padding-left: 20px;">Explore the Hidden Gems!</p>
        
-            <form action="#">
-                <label for="username" style="font-weight: bold";>Username</label>
-                <input type="text" id="username" placeholder="Type your Username" required><br>
+            <form action="welcome" method="post">
+                <label for="email" style="font-weight: bold";>Email</label>
+                <input type="email" id="email" placeholder="Type your Email" required><br>
                 <label for="password" style="font-weight: bold";>Password</label>
                 <input type="password" id="password" placeholder="Type your Password" required><br>
               
