--- a/tk/static/welcome/welcome.css
+++ b/tk/static/welcome/welcome.css
@@ -11,6 +11,12 @@ body, html {
 }
 
 h1 {
+    font-size: 30px;
+    margin-bottom: 20px;
+    font-family: Arial, sans-serif;
+}
+
+h2 {
     font-size: 40px;
     margin-bottom: 20px;
     font-family: Arial, sans-serif;
