--- a/tk/templates/signin/signin.html
+++ b/tk/templates/signin/signin.html
@@ -1,10 +1,11 @@
+{%load static%}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TripKerala</title>
-    <link rel="stylesheet" href="signin.css">
+    <link rel="stylesheet" href="{% static 'signin/signin.css'%}">
 </head>
 <body>
     <div class="container">
@@ -17,10 +18,11 @@
             <p style="padding-left: 20px;">Explore the Hidden Gems!</p>
        
             <form action="welcome" method="post">
+                {% csrf_token %}
                 <label for="email" style="font-weight: bold";>Email</label>
-                <input type="email" id="email" placeholder="Type your Email" required><br>
+                <input type="email" name="email" id="email" placeholder="Type your Email" required><br>
                 <label for="password" style="font-weight: bold";>Password</label>
-                <input type="password" id="password" placeholder="Type your Password" required><br>
+                <input type="password" name="password" id="password" placeholder="Type your Password" required><br>
               
                 <div style="padding-left: 100px;"><button type='submit'>Sign in</button> </div>
                 <div style="padding-left: 135px;">or</div>
