--- a/tk/templates/welcome/welcome.html
+++ b/tk/templates/welcome/welcome.html
@@ -1,14 +1,17 @@
+{% load static%}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="welcome.css">
+    <link rel="stylesheet" href="{% static 'welcome/welcome.css'%}">
     <title>Trip Planner</title>
 </head>
 <body>
     <div class="trip-planner">
-        <h1>Craft your journey!</h1>
+        <h1>Welcome {{ email }}!</h1>
+        <h2>Craft your journey!</h2>
         <form id="tripForm">
             <input type="text" id="destination" style="font-weight: bold" placeholder="Where to?" required>
             <div class="dates">
