--- a/tk/templates/signin/signup.html
+++ b/tk/templates/signin/signup.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TripKerala</title>
-    <link rel="stylesheet" href="{% static 'signin/signup.css'%}">
+    <link rel="stylesheet" href="{% static 'signin/signup2.css'%}">
 
 </head>
 <body>
@@ -34,7 +34,7 @@
                 </p>
                 {% endfor %}
                 <div style="padding-left: 100px;"><button type='submit' name="signup">Sign up</button> </div>
-                <p2>Already has an account? <a href="{% url 'signin' %}">Signin</a></p2>
+                <p2 style="padding-left: 50px;" >Already has an account? <a href="{% url 'signin' %}">Signin</a></p2>
             </form>
         </div>
     </div>
