--- a/tk/static/welcome/welcome2.css
+++ b/tk/static/welcome/welcome2.css
@@ -22,13 +22,29 @@ h2 {
     font-family: Arial, sans-serif;
 }
 
-input[type="text"],
 input[type="date"] {
     width: 100%;
     padding: 10px;
     margin-bottom: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
+}
+
+select#destination {
+    font-weight: lighter;
+    font-size: 16px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    margin-bottom: 20px;
+    border-radius: 5px;
+    width: 100%;
+    box-sizing: border-box; /* Ensure padding and border are included in the width */
+}
+
+/* CSS for the options within the select element */
+select#destination option {
+    font-weight: normal;
+    font-size: 14px;
 }
 
 .dates input[type="date"] {
@@ -39,7 +55,7 @@ input[type="date"] {
 }
 
 button {
-    background-color: blue;
+    background-color: black;
     color: white;
     border: none;
     padding: 10px 20px;
