--- a/tk/static/routing/routing2.css
+++ b/tk/static/routing/routing2.css
@@ -1,3 +1,26 @@
+.container {
+    display: flex;
+    height: 100vh; /* Set the height of the container to fill the viewport */
+}
+
+.left {
+    /* Styles for the left container */
+    width: 400px; /* Fixed width for the left container */
+    flex-wrap: wrap; /* Allow items to wrap to the next row */
+    overflow: auto;
+}
+
+.right {
+    /* Styles for the right container */
+    flex: 1; /* Allow the right container to grow and fill available space */
+}
+
+#map-container {
+    /* Styles for the map container */
+    width: 100%; /* Ensure the map container fills the entire right container */
+    height: 100%; /* Ensure the map container fills the entire right container */
+}
+
 #places-container {
     margin-top: 20px;
 }
@@ -9,10 +32,12 @@
 input[type="text"] {
     width: 300px;
     height: 30px;
-    margin-right: 15px;
+    margin-right: 15px; /* Add spacing between input fields */
+    margin-bottom: 15px; /* Add spacing between input fields and the button */
     font-size: 16px;
     padding: 5px;
 }
+
 
 .dropdown-content {
     display: none;
@@ -37,12 +62,33 @@ input[type="text"] {
 }
 
 .add-place-btn {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     border: none;
     border-radius: 50%;
     background-color: #007bff;
     color: white;
     font-size: 20px;
     cursor: pointer;
+    position: absolute;
+    left: 275px; /* Adjust the left position according to your preference */
+    top: 5px; /* Adjust the top position if needed */
+}
+
+
+button[type="submit"] {
+    margin-top: 20px; /* Add space between the input fields and the button */
+    width: 90px; /* Set the width of the button */
+    height: 30px; /* Set the height of the button */
+    font-size: 15px; /* Increase font size */
+    display: block; /* Ensure the button takes full width */
+    margin: 0 auto; /* Center the button horizontally */
+}
+
+.results {
+    margin-top: 20px; /* Adjust this value as needed */
+}
+
+.result {
+    margin-top: 5px; /* Adjust this value as needed */
 }
