--- a/tk/static/welcome/welcome2.css
+++ b/tk/static/welcome/welcome2.css
@@ -1,75 +1,71 @@
-/* styles.css */
-body, html {
-    margin-top: 80px;
-    font-family: Arial, sans-serif;
+/* Styles for the top panel */
+.top-panel {
+    background-color: #333;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    padding: 13px; /* Increased padding */
   }
-
-.trip-planner {
-    max-width: 500px;
-    margin: auto;
-    text-align: center;
-}
-
-h1 {
-    font-size: 30px;
-    margin-bottom: 20px;
-    font-family: Arial, sans-serif;
-}
-
-h2 {
-    font-size: 40px;
-    margin-bottom: 20px;
-    font-family: Arial, sans-serif;
-}
-
-input[type="date"] {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-select#destination {
-    font-weight: lighter;
-    font-size: 16px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    margin-bottom: 20px;
-    border-radius: 5px;
-    width: 100%;
-    box-sizing: border-box; /* Ensure padding and border are included in the width */
-}
-
-/* CSS for the options within the select element */
-select#destination option {
-    font-weight: normal;
-    font-size: 14px;
-}
-
-.dates input[type="date"] {
-    width: calc(50% - 10px);
-    margin-right: 160px;
-    font-size: 15px;
-    color: grey;
-}
-
-button {
-    background-color: black;
+  
+  /* Styles for the left buttons */
+  .left-buttons a {
+    text-decoration: none;
+    color: white;
+    margin-right: 25px; /* Increased margin for spacing */
+    transition: color 0.3s; /* Smooth transition effect */
+  }
+  
+  /* Change button color on hover */
+  .left-buttons a:hover {
+    color: #ffd700; /* Change to your desired color */
+  }
+  
+  /* Styles for the right buttons */
+  .right-buttons {
+    position: relative;
+  }
+  
+  /* Dropdown button */
+  .dropbtn {
+    background-color: transparent;
     color: white;
     border: none;
-    padding: 10px 20px;
     cursor: pointer;
-    border-radius: 5px;
-    font-size: 15px;
-}
+  }
+  
+  /* Dropdown content (hidden by default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: rgb(107, 112, 117);
+    min-width: 160px;
+    z-index: 1;
+    right: 0; /* Aligning the dropdown to the right */
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn {
+    background-color: #555;
+  }
 
-.startPlanning {
-    margin-top: 20px;
-}
-
-p {
-    font-size: 14px;
-    color: #888;
-}
-
+  
+  
