--- a/tk/templates/welcome/welcome2.html
+++ b/tk/templates/welcome/welcome2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TripKerala</title>
-    <link rel="stylesheet" href="{% static 'welcome/welcome.css' %}">
+    <link rel="stylesheet" href="{% static 'welcome/welcome2.css' %}">
 </head>
 <body>
 
@@ -26,6 +26,85 @@
     </div>
   </div>
 </div>
-<script src="{% static 'welcome/welcome.js' %}"></script>
+
+<div class="image-container">
+  <!-- Slideshow images -->
+  <div class="slideshow-container">
+
+       <div class="mySlides fade">
+          <div class="numbertext">1 / 9</div>
+          <img src="{% static 'welcome/kerala11.jpg' %}" style="width:100%">
+        </div>
+    
+        <div class="mySlides fade">
+          <div class="numbertext">2 / 9</div>
+          <img src="{% static 'welcome/kerala22.jpg' %}" style="width:100%">
+        </div>
+    
+        <div class="mySlides fade">
+          <div class="numbertext">3 / 9</div>
+          <img src="{% static 'welcome/kerala33.jpg' %}" style="width:100%">
+        </div>
+    
+        <div class="mySlides fade">
+          <div class="numbertext">4 / 9</div>
+          <img src="{% static 'welcome/kerala44.jpg' %}" style="width:100%">
+        </div>
+    
+        <div class="mySlides fade">
+          <div class="numbertext">5 / 9</div>
+          <img src="{% static 'welcome/kerala55.jpg' %}" style="width:100%">
+        </div>
+    
+        <div class="mySlides fade">
+          <div class="numbertext">6 / 9</div>
+          <img src="{% static 'welcome/kerala66.jpg' %}" style="width:100%">
+        </div>
+    
+        <div class="mySlides fade">
+          <div class="numbertext">7 / 9</div>
+          <img src="{% static 'welcome/kerala77.jpg' %}" style="width:100%">
+        </div>
+    
+        <div class="mySlides fade">
+          <div class="numbertext">8 / 9</div>
+          <img src="{% static 'welcome/kerala88.jpg' %}" style="width:100%">
+        </div>
+    
+        <div class="mySlides fade">
+          <div class="numbertext">9 / 9</div>
+          <img src="{% static 'welcome/kerala99.jpg' %}" style="width:100%">
+        </div>
+    
+        <!-- Next and previous buttons -->
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+      
+      <br> 
+      <br>
+      <br>
+    
+      <!-- The dots/circles -->
+      <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+        <span class="dot" onclick="currentSlide(4)"></span>
+        <span class="dot" onclick="currentSlide(5)"></span>
+        <span class="dot" onclick="currentSlide(6)"></span>
+        <span class="dot" onclick="currentSlide(7)"></span>
+        <span class="dot" onclick="currentSlide(8)"></span>
+        <span class="dot" onclick="currentSlide(9)"></span>
+      </div>
+  </div>
+</div>
+
+<!-- Bottom container -->
+<div class="bottom-container">
+<!-- Bottom container content -->
+</div>
+
+<!-- JavaScript for slideshow -->
+<script src="{% static 'welcome/welcome2.js' %}"></script>
 </body>
 </html>
