--- a/tk/static/places/places2.css
+++ b/tk/static/places/places2.css
@@ -1,16 +1,19 @@
 .container {
     display: flex;
-    height: 100vh; /* Set the height of the container to fill the viewport */
 }
+
 
 .left-container {
     /* Styles for the left container */
-    width: 500; /* Fixed width for the left container */
+    width: 350px; /* Fixed width for the left container */
 }
 
 .right-container {
-    /* Styles for the right container */
-    flex: 1; /* Allow the right container to grow and fill available space */
+    flex: 1;
+    width: 100px; /* Or specify a fixed width */
+    height: 550px; /* Or specify a fixed height */
+    position: relative;
+    z-index: 0;
 }
 
 #map-container {
@@ -82,7 +85,38 @@ input[type="text"] {
     background-color: #f1f1f1;
 }
 
+.navbar {
+    background-color: #222;
+    padding: 10px;
+    position: fixed; /* Position navbar absolutely */
+    top: 0; /* Position at the top of the viewport */
+    left: 0; /* Align with the left edge of the viewport */
+    right: 0;
+    width: 100%; /* Take the full width of the viewport */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    z-index: 1; /* Ensure navbar is above other content */
+    display: flex; /* Use flexbox */
+    justify-content: space-between; /* Space items evenly */
+}
 
+.nav-link {
+    color: #fff;
+    text-decoration: none;
+    padding: 8px 12px;
+    border-radius: 4px;
+    transition: background-color 0.3s ease;
+}
+
+.nav-link:hover {
+    background-color: #444;
+}
+
+.navbar-right {
+    /* You can add styles here for the right side of the navbar */
+    display: flex; /* Use flexbox for right side */
+    align-items: center; /* Center items vertically */
+    margin-right: 20px;
+}
 
 
 
