--- a/tk/static/welcome/welcome2.css
+++ b/tk/static/welcome/welcome2.css
@@ -1,3 +1,8 @@
+body {
+  margin: 0;
+  padding: 0;
+}
+
 /* Styles for the top panel */
 .top-panel {
     background-color: #333;
@@ -5,6 +10,8 @@
     display: flex;
     justify-content: space-between;
     padding: 13px; /* Increased padding */
+    height: 30px;
+    align-items: center;
   }
   
   /* Styles for the left buttons */
@@ -26,47 +33,7 @@
     padding-right: 55px;
   }
   
-  /* Dropdown button */
-  .dropbtn {
-    background-color: transparent;
-    color: white;
-    border: none;
-    cursor: pointer;
-  }
   
-  /* Dropdown content (hidden by default) */
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: rgb(107, 112, 117);
-    min-width: 160px;
-    z-index: 1;
-    right: 0; /* Aligning the dropdown to the right */
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
-    color: white;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
-  
-  /* Change the background color of the dropdown button when the dropdown content is shown */
-  .dropdown:hover .dropbtn {
-    background-color: #555;
-  }
 
 /* Styles for the image container */
 .image-container {
