--- a/tk/templates/places/places2.html
+++ b/tk/templates/places/places2.html
@@ -5,11 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Map Page</title>
-    <link rel="stylesheet" href="{% static 'places/places2.css' %}">
+    <link rel="stylesheet" href="{% static 'places/places.css' %}">
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 </head>
 <body>
-    <div class="container">
+    <nav class="navbar">
+        <div class="navbar-left">
+            <div style="font-family:Arial, Helvetica, sans-serif ; color: white; font-size: x-large; font-weight: bold; padding-left: 100px;">TripKerala</div>
+        </div>
+        <div class="navbar-right">
+            <a href="{% url 'welcome' %}" class="nav-link" style="font-family:Arial, Helvetica, sans-serif;">Home</a>
+            <a href="{% url 'signout' %}" class="nav-link" style="font-family:Arial, Helvetica, sans-serif;">Logout</a>
+        </div>
+    </nav>
+    
+    <div class="container" style="padding-top: 70px;">
         <div class="left-container">
             <form action="{% url 'places' %}" method="post">
                 {% csrf_token %}
@@ -77,7 +87,7 @@
         </div>
     </div>
 
-    <script src="{% static 'places/places2.js'%}"></script>
+    <script src="{% static 'places/places.js'%}"></script>
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script>
         // Load the map from the provided map file path
