Bucket list added

--- a/tk/templates/welcome/welcome.html
+++ b/tk/templates/welcome/welcome.html
@@ -12,7 +12,7 @@
 <div class="top-panel"> 
   <div class="left-buttons" style="padding-left: 30px;">
     <a href="{% url 'print_hello' %}" style="font-size: large; font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Journal</a>
-    <a href="{% url 'routing' %}" style="font-size: large; font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Bucket list</a>
+    <a href="{% url 'bucket' %}" style="font-size: large; font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Bucket list</a>
     <a href="{% url 'places' %}" style="font-size: large; font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Explore</a>
     <a href="{% url 'routing' %}" style="font-size: large; font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">Optimal route</a>
   </div>
