--- a/tk/templates/journal/journal.html
+++ b/tk/templates/journal/journal.html
@@ -8,6 +8,21 @@
   
   <link rel="stylesheet" href="{% static 'journal/journal.css' %}">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
+  <style>
+    .delete-btn {
+      background-color: rgb(67, 66, 66);
+      color: #fff;
+      border: none;
+      padding: 5px 10px;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s, color 0.3s;
+    }
+    
+    .delete-btn:hover {
+      background-color: rgb(40, 40, 40); /* Change to desired hover color */
+    }
+  </style>
 </head>
 <body>
   <nav>
@@ -50,18 +65,22 @@
         <h1><br>JOURNAL ENTRIES</h1>
         &nbsp;
         {% for entry in journalData %}
-            &nbsp;
-            <div class="journal-entry">
-                <p>Date: {{ entry.created_at }}</p>
-                <div class="flex-box" style="white-space: pre-wrap;">
-                    <p>{{ entry.journal_text }}</p>
-                    <div class="im">
-                        {% for image in entry.images.all %}
-                            <img src="media/{{image.image}}"/>
-                        {% endfor %}
-                    </div>
-                </div>
-            </div>
+          &nbsp;
+          <div class="journal-entry">
+              <p>Date: {{ entry.created_at }}</p>
+              <div class="flex-box" style="white-space: pre-wrap;">
+                  <p>{{ entry.journal_text }}</p>
+                  <div class="im">
+                      {% for image in entry.images.all %}
+                          <img src="media/{{ image.image }}"/>
+                      {% endfor %}
+                  </div>
+              </div>
+              <form method="post" action="{% url 'delete_journal_entry' entry.id %}">
+                  {% csrf_token %}
+                  <button type="submit" class="delete-btn">Delete</button>
+              </form>
+          </div>
         {% endfor %}
     </div>
 </div>
@@ -101,5 +120,17 @@
         fileInputsContainer.appendChild(div);
     });
 </script>
+<script>
+  document.querySelectorAll('.delete-btn').forEach(button => {
+      button.addEventListener('click', function(event) {
+          event.preventDefault();
+          if (confirm("Are you sure you want to delete this journal entry?")) {
+              const form = this.closest('form');
+              form.submit();
+          }
+      });
+  });
+</script>
+
 </body>
 </html>
